--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
 
 .ingredients{
 	position: absolute;
+	margin-top: -100px;
 }
 
 .cheese {
@@ -167,4 +168,16 @@ body {
 }
 .z4 {
   z-index: 4;
+}
+
+.proceedToCheckout {
+  margin-top: 30px;
+  padding: 10px 20px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  background: orange;
+  border: 0px;
+  border-radius: 20px;
+  font-weight: 600;
+  cursor: pointer;
+  font-size: 20px;
 }
